sandbox/output
StringCalculator.java:7: error: cannot find symbol
            if (numbers.contains(SPARATOR)) {
                                 ^
  symbol:   variable SPARATOR
  location: class StringCalculator
1 error
